test/resources/typer/failing/CallError7.scala
object Call {
    L.Cons((), L.Nil())
}